kustomize/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deployment
spec:
  minReadySeconds: placeholder
  strategy:
    rollingUpdate:
      maxSurge: placeholder
      maxUnavailable: placeholder
  #  replicas: placeholder
  template:
    spec:
      imagePullSecrets:
        - name: placeholder-registry-pull
      containers:
        - name: placeholder
          image: placeholder-image
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          command: ["npm", "start"]
          resources:
            limits:
              memory: placeholder
            requests:
              cpu: placeholder
              memory: placeholder
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "10"]
