kustomize/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: anotherapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: anotherapp
